cmake_minimum_required(VERSION 3.17)
project(gpro)
add_compile_options(-Wall -Wextra -pedantic)
set(CMAKE_CXX_STANDARD_REQUIRED 17)
find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
#FILE(GLOB AllSource application/DogsVSCats/main.cpp)
FILE(GLOB GameSource libs/Game/src/*.*pp libs/Game/include/*.*pp)
FILE(GLOB MenuSource libs/Menu/src/*.*pp libs/Menu/include/*.*pp)
include_directories(application/DogsVSCats/ libs/Game/include libs/Menu/include Resources/*)
#add_executable(${CMAKE_PROJECT_NAME} ${AllSource})
add_executable(${CMAKE_PROJECT_NAME} application/DogsVSCats/main.cpp)
add_library(Menus STATIC ${MenuSource})
add_library(Game STATIC ${GameSource})
target_link_libraries(${CMAKE_PROJECT_NAME} LINK_PUBLIC Menus Game sfml-graphics sfml-audio)
