cmake_minimum_required(VERSION 3.17)
project(bpro)
add_compile_options(-Wall -Wextra -pedantic)
set(CMAKE_CXX_STANDARD_REQUIRED 17)
find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
FILE(GLOB AllSource src/*.*pp)
include_directories(src assets)
add_executable(${CMAKE_PROJECT_NAME} ${AllSource})
target_link_libraries(${CMAKE_PROJECT_NAME} sfml-graphics sfml-audio)